fixed minor spacing prolem on feature paragraphs

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -194,6 +194,7 @@
 .featureText {
   padding: 0 2.5rem;
   margin-top: 1.5rem;
+  margin-bottom: 0;
 }
 
 /* steps */
